@@ -8,6 +8,7 @@ import javafx.stage.Stage;
     Jonathan Fessler
     Weather App Java Final Project
     4/28/2025
+    VM: --module-path "C:\Users\jfessler1\OneDrive - Northeast Community College O365\Documents\ProgramminginJava\Source\javafx-sdk-23.0.2\lib" --add-modules=javafx.fxml,javafx.controls
  */
 
 public class Main extends Application {
